# mnemograph

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  demo-output.txt  pyproject.toml
docs/decisions/: 2026-04-09-foundation.md
docs/plans/: 2026-04-09-mnemograph-implementation-plan.md  2026-04-11-mnemograph-adversarial-rigor-plan.md  2026-04-11-public-benchmark-integration-plan.md
docs/specs/: 2026-04-09-benchmark-methodology.md  2026-04-09-canonical-schema.md  2026-04-09-ingestion-and-extraction-design.md  2026-04-09-reconciliation-and-lifecycle-design.md  2026-04-09-retrieval-context-chat-design.md  2026-04-09-system-architecture.md  2026-04-11-public-benchmark-integration-design.md
scripts/: demo_hobbes.py
tests/: test_adapter_projections.py  test_benchmark_cli.py  test_benchmark_common.py  test_chat_loop.py  test_chunking.py  test_cli.py  test_confidence.py  test_conflict_policy.py  test_consolidation.py  test_context_assembly.py  test_crawl_policy.py  test_decay.py  test_demo_output.py  test_distillation.py  test_engine_api.py  test_eval_cli.py  test_eval_harness.py  test_extraction_contracts.py  test_extraction_prompt.py  test_extraction_quality_filters.py  test_llm_client.py  test_longmemeval_adapter.py  test_longmemeval_evaluator.py  test_longmemeval_runner.py  test_merge_actions.py  test_mirror_outputs.py  test_package_bootstrap.py  test_paths.py  test_predicate_registry.py  test_qualified_claims.py  test_retrieval_classifier.py  test_schema_bootstrap.py  test_source_registration.py  test_source_snippet_fallback.py  test_url_ingest.py
(+73 files in other folders)
